src/objects/ECUSTOMS__vc_config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ECUSTOMS__Account_Add2Name__c</fullName>
        <defaultValue>&apos;Shipping&apos;</defaultValue>
        <label>Account Add2 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_Add3Name__c</fullName>
        <defaultValue>&apos;Address 3&apos;</defaultValue>
        <label>Account Add3 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_City2_Field_Map__c</fullName>
        <defaultValue>&apos;ShippingCity&apos;</defaultValue>
        <label>Account City2 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_City3_Field_Map__c</fullName>
        <label>Account City3 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_City_Field_Map__c</fullName>
        <defaultValue>&apos;BillingCity&apos;</defaultValue>
        <label>Account City Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_Company_Field_Map__c</fullName>
        <defaultValue>&apos;Name&apos;</defaultValue>
        <label>Account Company Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_Country2_Field_Map__c</fullName>
        <defaultValue>&apos;ShippingCountry&apos;</defaultValue>
        <label>Account Country2 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_Country3_Field_Map__c</fullName>
        <label>Account Country3 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_Country_Field_Map__c</fullName>
        <defaultValue>&apos;BillingCountry&apos;</defaultValue>
        <label>Account Country Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_Country_List__c</fullName>
        <label>Account Country List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_E1_Map__c</fullName>
        <defaultValue>&apos;ID&apos;</defaultValue>
        <label>Account E1 Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_E2_Map__c</fullName>
        <label>Account E2 Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_E3_Map__c</fullName>
        <label>Account E3 Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_EnableAdd2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account EnableAdd2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_EnableAdd3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account EnableAdd3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_Name_Field_Map__c</fullName>
        <label>Account Name Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_PostalCode2_Field_Map__c</fullName>
        <defaultValue>&apos;ShippingPostalCode&apos;</defaultValue>
        <label>Account PostalCode2 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_PostalCode3_Field_Map__c</fullName>
        <label>Account PostalCode3 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_PostalCode_Field_Map__c</fullName>
        <defaultValue>&apos;BillingPostalCode&apos;</defaultValue>
        <label>Account PostalCode Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_State2_Field_Map__c</fullName>
        <defaultValue>&apos;ShippingState&apos;</defaultValue>
        <label>Account State2 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_State3_Field_Map__c</fullName>
        <label>Account State3 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_State_Field_Map__c</fullName>
        <defaultValue>&apos;BillingState&apos;</defaultValue>
        <label>Account State Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_Street2_Field_Map__c</fullName>
        <defaultValue>&apos;ShippingStreet&apos;</defaultValue>
        <label>Account Street2 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_Street3_Field_Map__c</fullName>
        <label>Account Street3 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Account_Street_Field_Map__c</fullName>
        <defaultValue>&apos;BillingStreet&apos;</defaultValue>
        <label>Account Street Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_Add2Name__c</fullName>
        <label>Contact Add2Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_Add3Name__c</fullName>
        <label>Contact Add3Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_City2_Field_Map__c</fullName>
        <label>Contact City2 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_City3_Field_Map__c</fullName>
        <label>Contact City3 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_City_Field_Map__c</fullName>
        <defaultValue>&apos;MailingCity&apos;</defaultValue>
        <label>Contact City Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_Company_Field_Map__c</fullName>
        <label>Contact Company Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_Country2_Field_Map__c</fullName>
        <label>Contact Country2 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_Country3_Field_Map__c</fullName>
        <label>Contact Country3 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_Country_Field_Map__c</fullName>
        <defaultValue>&apos;MailingCountry&apos;</defaultValue>
        <label>Contact Country Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_Country_List__c</fullName>
        <label>Contact Country List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_E1_Map__c</fullName>
        <defaultValue>&apos;ID&apos;</defaultValue>
        <label>Contact E1 Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_E2_Map__c</fullName>
        <label>Contact E2 Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_E3_Map__c</fullName>
        <label>Contact E3 Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_EnableAdd2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact EnableAdd2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_Name_Field_Map__c</fullName>
        <defaultValue>&apos;Name&apos;</defaultValue>
        <label>Contact Name Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_PostalCode2_Field_Map__c</fullName>
        <label>Contact PostalCode2 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_PostalCode3_Field_Map__c</fullName>
        <label>Contact PostalCode3 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_PostalCode_Field_Map__c</fullName>
        <defaultValue>&apos;MaillingPostalCode&apos;</defaultValue>
        <label>Contact PostalCode Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_State2_Field_Map__c</fullName>
        <label>Contact State2 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_State3_Field_Map__c</fullName>
        <label>Contact State3 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_State_Field_Map__c</fullName>
        <defaultValue>&apos;MailingState&apos;</defaultValue>
        <label>Contact State Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_Street2_Field_Map__c</fullName>
        <label>Contact Street2 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_Street3_Field_Map__c</fullName>
        <label>Contact Street3 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Contact_Street_Field_Map__c</fullName>
        <defaultValue>&apos;MailingStreet&apos;</defaultValue>
        <label>Contact Street Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Core__c</fullName>
        <label>Core</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Country_List__c</fullName>
        <label>Country List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Enable_Account_Address_Screening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Account Address Screening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Enable_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Enable_Contact_Address_Screening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Contact Address Screening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Enable_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Enable_Lead_Address_Screening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Lead Address Screening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Enable_Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Error_Notification_Email__c</fullName>
        <description>Address to send API connection errors to.</description>
        <inlineHelpText>Address to send API connection errors to.</inlineHelpText>
        <label>Error Notification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__IMWCatchup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IMWCatchup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__IMW_Catchup_Date__c</fullName>
        <label>IMW Catchup Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__IMW_Catchup_Run_Date__c</fullName>
        <label>IMW Catchup Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_Add2Name__c</fullName>
        <label>Lead Add2Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_Add3Name__c</fullName>
        <label>Lead Add3Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_City2_Field_Map__c</fullName>
        <label>Lead City2 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_City3_Field_Map__c</fullName>
        <label>Lead City3 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_City_Field_Map__c</fullName>
        <defaultValue>&apos;City&apos;</defaultValue>
        <label>Lead City Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_Company_Field_Map__c</fullName>
        <defaultValue>&apos;Company&apos;</defaultValue>
        <label>Lead Company Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_Country2_Field_Map__c</fullName>
        <label>Lead Country2 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_Country3_Field_Map__c</fullName>
        <label>Lead Country3 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_Country_Field_Map__c</fullName>
        <defaultValue>&apos;Country&apos;</defaultValue>
        <label>Lead Country Field Map</label>
        <length>59</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_Country_List__c</fullName>
        <label>Lead Country List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_E1_Map__c</fullName>
        <defaultValue>&apos;ID&apos;</defaultValue>
        <label>Lead E1 Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_E2_Map__c</fullName>
        <label>Lead E2 Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_E3_Map__c</fullName>
        <label>Lead E3 Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_EnableAdd2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead EnableAdd2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_Name_Field_Map__c</fullName>
        <defaultValue>&apos;Name&apos;</defaultValue>
        <label>Lead Name Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_PostalCode2_Field_Map__c</fullName>
        <label>Lead PostalCode2 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_PostalCode3_Field_Map__c</fullName>
        <label>Lead PostalCode3 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_PostalCode_Field_Map__c</fullName>
        <defaultValue>&apos;PostalCode&apos;</defaultValue>
        <label>Lead PostalCode Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_State2_Field_Map__c</fullName>
        <label>Lead State2 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_State3_Field_Map__c</fullName>
        <label>Lead State3 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_State_Field_Map__c</fullName>
        <defaultValue>&apos;State&apos;</defaultValue>
        <label>Lead State Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_Street2_Field_Map__c</fullName>
        <label>Lead Street2 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_Street3_Field_Map__c</fullName>
        <label>Lead Street3 Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Lead_Street_Field_Map__c</fullName>
        <defaultValue>&apos;Street&apos;</defaultValue>
        <label>Lead Street Field Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Number__c</fullName>
        <label>Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Password__c</fullName>
        <label>Password</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Suspend_Screening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suspend Screening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Track_Compliance_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Compliance History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__aAddressType__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipping Address (not Billing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__aAddress_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Fields - Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__aBus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Business Words</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__aCityTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>City Trigger - Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__aCountryTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Country Trigger - Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__aFRender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Fuzzy Render</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__aFS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Field Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__aFuzzyLevel__c</fullName>
        <label>Account Fuzzy Level</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__aMOTR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account MOTR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__aRender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Render Address Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__aScreeningTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>enables triggering RPS only if Screening Trigger field is True</description>
        <label>Screening Trigger Override - Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__aSearchType__c</fullName>
        <label>Account Search Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__aStateTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Trigger - Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__aStem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Word Stemming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__aThes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Thesaurus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__asGroups__c</fullName>
        <label>Account List Groups</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__asModes__c</fullName>
        <label>Account Search Modes</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__cAddress_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Fields - Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__cBus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Business Words</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__cCityTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>City Trigger - Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__cCountryTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Country Trigger - Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__cFRender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Fuzzy Render</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__cFS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Field Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__cFuzzyLevel__c</fullName>
        <label>Contact Fuzzy Level</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__cMOTR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact MOTR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__cRender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Render Address Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__cScreeningTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>enables triggering RPS only if Screening Trigger field is True</description>
        <label>Screening Trigger Override - Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__cSearchType__c</fullName>
        <label>Contact Search Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__cStateTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Trigger - Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__cStem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Word Stemming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__cThes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Thesaurus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__csGroups__c</fullName>
        <label>Contact List Groups</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__csModes__c</fullName>
        <label>Contact Search Modes</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__lAddress_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Fields - Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__lBus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Business Words</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__lCityTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>City Trigger - Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__lCountryTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Country Trigger - Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__lFRender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Fuzzy Render</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__lFS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Field Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__lFuzzyLevel__c</fullName>
        <label>Lead Fuzzy Level</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__lMOTR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead MOTR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__lRender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Render Address Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__lScreeningTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>enables triggering RPS only if Screening Trigger field is True</description>
        <label>Screening Trigger Override - Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__lSearchType__c</fullName>
        <label>Lead Search Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__lStateTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Trigger - Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__lStem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Word Stemming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__lThes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leads Thesaurus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__lsGroups__c</fullName>
        <label>Lead List Groups</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__lsModes__c</fullName>
        <label>Lead Search Modes</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Visual Compliance Settings</label>
</CustomObject>